; ModuleID = '/home/carl/AnghaBench/git/extr_diff-lib.c_show_new_file.c'
source_filename = "/home/carl/AnghaBench/git/extr_diff-lib.c_show_new_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rev_info = type { i32 }
%struct.cache_entry = type { i32 }
%struct.object_id = type { i32 }

@.str = private unnamed_addr constant [2 x i8] c"+\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rev_info*, %struct.cache_entry*, i32, i32)* @show_new_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @show_new_file(%struct.rev_info* %0, %struct.cache_entry* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.rev_info*, align 8
  %6 = alloca %struct.cache_entry*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.object_id*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.rev_info* %0, %struct.rev_info** %5, align 8
  store %struct.cache_entry* %1, %struct.cache_entry** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  store i32 0, i32* %11, align 4
  %12 = load %struct.cache_entry*, %struct.cache_entry** %6, align 8
  %13 = load i32, i32* %7, align 4
  %14 = load i32, i32* %8, align 4
  %15 = load %struct.rev_info*, %struct.rev_info** %5, align 8
  %16 = getelementptr inbounds %struct.rev_info, %struct.rev_info* %15, i32 0, i32 0
  %17 = call i64 @get_stat_data(%struct.cache_entry* %12, %struct.object_id** %9, i32* %10, i32 %13, i32 %14, i32* %11, i32* %16)
  %18 = icmp slt i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %4
  br label %32

20:                                               ; preds = %4
  %21 = load %struct.rev_info*, %struct.rev_info** %5, align 8
  %22 = load %struct.cache_entry*, %struct.cache_entry** %6, align 8
  %23 = load %struct.object_id*, %struct.object_id** %9, align 8
  %24 = load %struct.object_id*, %struct.object_id** %9, align 8
  %25 = call i32 @is_null_oid(%struct.object_id* %24)
  %26 = icmp ne i32 %25, 0
  %27 = xor i1 %26, true
  %28 = zext i1 %27 to i32
  %29 = load i32, i32* %10, align 4
  %30 = load i32, i32* %11, align 4
  %31 = call i32 @diff_index_show_file(%struct.rev_info* %21, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), %struct.cache_entry* %22, %struct.object_id* %23, i32 %28, i32 %29, i32 %30)
  br label %32

32:                                               ; preds = %20, %19
  ret void
}

declare dso_local i64 @get_stat_data(%struct.cache_entry*, %struct.object_id**, i32*, i32, i32, i32*, i32*) #1

declare dso_local i32 @diff_index_show_file(%struct.rev_info*, i8*, %struct.cache_entry*, %struct.object_id*, i32, i32, i32) #1

declare dso_local i32 @is_null_oid(%struct.object_id*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
